Fix responsivness issue on mobile and tablet resolution

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,6 +85,7 @@ header {
 #game-area {
     display: flex;
     justify-content: center;
+    flex-direction: row;
 }
 
 #user-side {
@@ -179,7 +180,7 @@ input:active {
     #game-section {
         width: 100%;
         height: max-content;
-        padding: 80px 0;
+        padding: 20px 0;
         box-sizing: border-box;
         display: flex;
         flex-direction: column;
@@ -214,15 +215,15 @@ input:active {
     }
 
     .icon-size {
-        width: 50vw;
-        height: 20vh;
+        width: 200px;
+        height: 170px;
         padding: 20px 0 0;
     }
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 600px) and (min-width: 451px) {
     #scores-area {
         display: none;
     }
@@ -281,7 +282,7 @@ input:active {
 
 /* Large devices (laptops/desktops, 900px and up) */
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 900px) and (min-width: 601px) {
     #scores-area {
         display: none;
     }
@@ -330,8 +331,66 @@ input:active {
     }
 
     .icon-size {
-        width: 30%;
-        height: 40%;
+        width: 200px;
+        height: 180px;
         padding: 20px 0 0;
     }
+} 
+
+
+@media screen and (max-width: 1550px) and (min-width: 901px) {
+    
+    #game-section {
+        width: 100%;
+        height: max-content;
+        padding: 80px 0;
+        box-sizing: border-box;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #scores-area {
+        width: 70%;
+        height: 60px;
+        font-size: 200%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        line-height: 60px;
+    }
+
+    #user-side {
+        width: 25em;
+        height: 25em;
+        text-align: center;
+        border: 2px dashed rgb(0, 0, 0);
+        border-radius: 20px;
+    }
+
+    .icon-size {
+        width: 184px;
+        height: 129px;
+    }
+
+    #computer-side {
+        width: 25em;
+        height: 25em;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: 2px dashed rgb(0, 0, 0);
+        border-radius: 20px;
+    }
+
+    #answer-side {
+        width: 25em;
+        height: 25em;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        flex-direction: column;
+    }
+
 } 
